# django-graphql-demo

./: .gitignore  README.md  manage.py  pyproject.toml
recipe_step_tracker/: settings.py  urls.py  wsgi.py
recipe_step_tracker_api/: apps.py  models.py  schema.py  serializers.py  types.py  urls.py  views.py
recipe_step_tracker_api/migrations/: 0001_initial.py
web_project/: settings.py  urls.py
